# cppq

./: CMakeLists.txt
bindings/java/com/cppq/: Cppq.java
bindings/python/: cppq.py
cmake/: CompilerOptions.cmake
examples/: CMakeLists.txt
examples/simple_select/: main.cpp
include/cppq/core/: Column.hpp  Error.hpp  Identifier.hpp  Param.hpp  Query.hpp  Table.hpp
include/cppq/ffi/: cppq_ffi.h
include/cppq/pg/: Connection.hpp  Result.hpp
include/cppq/sql/: Aggregate.hpp  Delete.hpp  Expression.hpp  Insert.hpp  Select.hpp  SetOp.hpp  Update.hpp
skills/cppq-guide/: SKILL.md  examples.md  reference.md
src/: CMakeLists.txt
src/core/: Column.cpp  Table.cpp
src/ffi/: cppq_ffi.cpp
src/pg/: Connection.cpp
src/sql/: Delete.cpp  Expression.cpp  Insert.cpp  Select.cpp  Update.cpp
tests/: CMakeLists.txt  test_integration.cpp  test_json.cpp  test_json_python.py  test_sql_builder.cpp
tests/java/: TestCppq.java
